# OrganizeFolder

./: .gitignore  README.md  SAFE_MERGE_GUIDE.md  create_test_images.py  organize_config.yaml  organize_folder.py  pyproject.toml  pytest_output.txt  test_migratef.py  test_pipe.py  test_pipe_simple.py
src/badzf/: __init__.py  __main__.py  archive_check_history.json  archive_checker.py  config.py  history_manager.py  logger_module.py  path_handler.py
src/classf/: __init__.py  __main__.py
src/classf/tests/: test_classf.py
src/classq/: __init__.py  __main__.py
src/cleanf/: CLEANF_PRESETS_GUIDE.md  __init__.py  __main__.py  backup.py  config.py  empty.py  preview.py  test_patterns.py
src/dissolvef/: __init__.py  __main__.py  archive.py  blacklist_config.json  direct.py  media.py  nested.py  path_filter.py  similarity.py  undo.py
src/dissolvef/tests/: test_archive_collect.py  test_nested_flatten.py  test_similarity.py  test_undo.py
src/mergef/: __init__.py  __main__.py  merge_part.py
src/mergef/patterns/: README.md  config.py  patterns.py
src/migratef/: __init__.py  __main__.py  migrate.py
src/migratef/core/: file_migrator.py  migration_service.py  models.py  path_collector.py  undo.py
src/migratef/pipe/: __main__.py  input.py  migrate.py
src/migratef/ui/: interactive.py
src/migratef/utils/: logger_config.py
src/organizef/: __init__.py  __main__.py  config.toml  generator.py  input.py  interactive.py  organize_config.yaml
src/organizef/rules/: classify_manga.yaml  move_gifs.yaml  (+11 more)
src/passt/: README.md  __main__.py  config.json
src/restoret/: __init__.py  __main__.py  interactive.py
src/snf/: __main__.py
src/snu/: __main__.py
src/synct/: __main__.py  patterns.toml
src/transq/: README.md  __init__.py  __main__.py  core.py
(+20 files in other folders)
